...
            VStack(alignment: .leading) {
                TextField("Enter amount", text: $viewModel.amount)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .keyboardType(.decimalPad)
                    .padding()
                    .focused($isTextFieldFocused)
                    .accessibilityIdentifier("amountTextField")
                    .toolbar {
                        ToolbarItemGroup(placement: .keyboard) {
                            Spacer()
                            Button("Done") {
                                isTextFieldFocused = false
                            }
...
                                .foregroundColor(.gray)
                        }
                        .padding(.horizontal, 12)
                        .padding(.vertical, 8)
                        .background(RoundedRectangle(cornerRadius: 8).stroke(Color.gray))
                    }
                    .accessibilityIdentifier("selectCurrencyButton")
                }
                .padding(.trailing, 16)
                
                Spacer()
                
                ScrollView {
...
